@@ -1,3 +1,7 @@
+2001-06-01  Peter Williams  <peterw@ximian.com>
+
+	* autogen.sh: s,Gnome,$PKG_NAME,g
+
 2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* 0.5 RELEASE
